Bug 1192989 - Simplify handling by ifdefing in all.js. r=kamidphish, a=sylvestre